Added get all rooms with pagination
