# internal/api/generated/go-chat/api/proto/website/website_grpc.pb.go
@@ -25,24 +25,19 @@ const (
 	RoomService_GetOwnerRooms_FullMethodName = "/website.RoomService/GetOwnerRooms"
 	RoomService_SearchRooms_FullMethodName   = "/website.RoomService/SearchRooms"
 	RoomService_DeleteRoom_FullMethodName    = "/website.RoomService/DeleteRoom"
+	RoomService_GetAllRooms_FullMethodName   = "/website.RoomService/GetAllRooms"
 )
 
 // RoomServiceClient is the client API for RoomService service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
-//
-// The RoomService defines the Room-related operations.
 type RoomServiceClient interface {
-	// Create a new room
 	CreateRoom(ctx context.Context, in *CreateRoomRequest, opts ...grpc.CallOption) (*CreateRoomResponse, error)
-	// Get a room by its ID
 	GetRoom(ctx context.Context, in *GetRoomRequest, opts ...grpc.CallOption) (*Room, error)
-	// Get rooms by owner ID
 	GetOwnerRooms(ctx context.Context, in *GetOwnerRoomsRequest, opts ...grpc.CallOption) (*RoomsResponse, error)
-	// Search for rooms by name
 	SearchRooms(ctx context.Context, in *SearchRoomsRequest, opts ...grpc.CallOption) (*RoomsResponse, error)
-	// Delete a room by ID
 	DeleteRoom(ctx context.Context, in *DeleteRoomRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+	GetAllRooms(ctx context.Context, in *GetAllRoomsRequest, opts ...grpc.CallOption) (*RoomsResponse, error)
 }
 
 type roomServiceClient struct {
@@ -103,22 +98,26 @@ func (c *roomServiceClient) DeleteRoom(ctx context.Context, in *DeleteRoomReques
 	return out, nil
 }
 
+func (c *roomServiceClient) GetAllRooms(ctx context.Context, in *GetAllRoomsRequest, opts ...grpc.CallOption) (*RoomsResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(RoomsResponse)
+	err := c.cc.Invoke(ctx, RoomService_GetAllRooms_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // RoomServiceServer is the server API for RoomService service.
 // All implementations must embed UnimplementedRoomServiceServer
 // for forward compatibility.
-//
-// The RoomService defines the Room-related operations.
 type RoomServiceServer interface {
-	// Create a new room
 	CreateRoom(context.Context, *CreateRoomRequest) (*CreateRoomResponse, error)
-	// Get a room by its ID
 	GetRoom(context.Context, *GetRoomRequest) (*Room, error)
-	// Get rooms by owner ID
 	GetOwnerRooms(context.Context, *GetOwnerRoomsRequest) (*RoomsResponse, error)
-	// Search for rooms by name
 	SearchRooms(context.Context, *SearchRoomsRequest) (*RoomsResponse, error)
-	// Delete a room by ID
 	DeleteRoom(context.Context, *DeleteRoomRequest) (*emptypb.Empty, error)
+	GetAllRooms(context.Context, *GetAllRoomsRequest) (*RoomsResponse, error)
 	mustEmbedUnimplementedRoomServiceServer()
 }
 
@@ -143,6 +142,9 @@ func (UnimplementedRoomServiceServer) SearchRooms(context.Context, *SearchRoomsR
 }
 func (UnimplementedRoomServiceServer) DeleteRoom(context.Context, *DeleteRoomRequest) (*emptypb.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method DeleteRoom not implemented")
+}
+func (UnimplementedRoomServiceServer) GetAllRooms(context.Context, *GetAllRoomsRequest) (*RoomsResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetAllRooms not implemented")
 }
 func (UnimplementedRoomServiceServer) mustEmbedUnimplementedRoomServiceServer() {}
 func (UnimplementedRoomServiceServer) testEmbeddedByValue()                     {}
@@ -255,6 +257,24 @@ func _RoomService_DeleteRoom_Handler(srv interface{}, ctx context.Context, dec f
 	return interceptor(ctx, in, info, handler)
 }
 
+func _RoomService_GetAllRooms_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetAllRoomsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RoomServiceServer).GetAllRooms(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: RoomService_GetAllRooms_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RoomServiceServer).GetAllRooms(ctx, req.(*GetAllRoomsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // RoomService_ServiceDesc is the grpc.ServiceDesc for RoomService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -281,6 +301,10 @@ var RoomService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "DeleteRoom",
 			Handler:    _RoomService_DeleteRoom_Handler,
+		},
+		{
+			MethodName: "GetAllRooms",
+			Handler:    _RoomService_GetAllRooms_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
